[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval_medhansh"
version = "0.0.1"
authors = [
  { name="Medhansh Sharma", email="medh4nsh@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Medhansh404/eval"
Issues = "https://github.com/Medhansh404/eval/issues"
